<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/svCreatePoll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="outsideInset"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvCreateNewPoll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="28dp"
            android:text="@string/create_poll_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPollName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietPollName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLightest"
                android:inputType="textPersonName"
                android:hint="@string/poll_name_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDateAndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietDateAndTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:background="@color/colorPrimaryLightest"
                android:hint="@string/expire_time_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCandidates"
            android:nestedScrollingEnabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </androidx.recyclerview.widget.RecyclerView>
        <ImageButton
            android:id="@+id/btnAddCandidate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_add_box"
            android:background="@android:color/transparent"
            android:tint="@color/colorPrimaryDark"
            android:layout_marginTop="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btnCreatePoll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/create" />
        </RelativeLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
