<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_polls"
            android:icon="@drawable/ic_poll_24"
            android:title="@string/polls" />
    </group>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_power_24"
        android:title="@string/log_out" />
</menu>